@@ -175,8 +175,12 @@ static time_t timetUsingCF(struct tm *tm, CFTimeZoneRef timeZone)
     }
 
     CFAbsoluteTime absoluteTime = CFGregorianDateGetAbsoluteTime(date, timeZone);
+       CFTimeInterval interval = absoluteTime + kCFAbsoluteTimeIntervalSince1970;
+       if (interval > LONG_MAX) {
+               interval = LONG_MAX;
+       }
 
-    return (time_t)(absoluteTime + kCFAbsoluteTimeIntervalSince1970);
+    return (time_t) interval;
 }
 
 static time_t mktimeUsingCF(struct tm *tm)
